# soundio-rs

./: .gitmodules  .travis.yml  Cargo.toml  LICENSE  Readme.md  appveyor.yml
examples/list_devices/: main.rs
examples/player/: main.rs
examples/recorder/: main.rs
examples/sine/: main.rs
libsoundio-sys/: Cargo.toml  README.md  build.rs  lib.rs
src/: backend.rs  channels.rs  context.rs  device.rs  error.rs  format.rs  instream.rs  layout.rs  lib.rs  outstream.rs  outstream_.rs  sample.rs  stream.rs  types.rs  util.rs
