[package]
name = "soundio"
version = "0.2.1"
authors = ["Tim Hutt <tdhutt@gmail.com>", "Ramy <RamiHg@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RamiHg/soundio-rs"
homepage = "https://github.com/RamiHg/soundio-rs"
documentation = "https://docs.rs/soundio/"
description = """
Bindings to libsoundio for audio input and output.
"""
keywords = ["audio", "media", "soundio"]
categories = ["multimedia", "multimedia::audio"]

[dependencies]
libsoundio-sys = { path = "libsoundio-sys", version = "0.3.0" }

# Examples

[[example]]
name = "player"
path = "examples/player/main.rs"

[[example]]
name = "recorder"
path = "examples/recorder/main.rs"

[[example]]
name = "list_devices"
path = "examples/list_devices/main.rs"

[[example]]
name = "sine"
path = "examples/sine/main.rs"

[dev-dependencies]
crossbeam = "0.2.10"
hound = "3.0.0"

[badges]
travis-ci = { repository = "https://github.com/Timmmm/soundio-rs", branch = "master" }
appveyor = { repository = "https://github.com/Timmmm/soundio-rs", branch = "master", service = "github" }

maintenance = { status = "actively-developed" }