[package]
name = "libsoundio-sys"
edition = "2018"
version = "0.3.0"
authors = ["Tim Hutt <tdhutt@gmail.com>", "Ramy <RamiHg@users.noreply.github.com>"]
links = "soundio"
build = "build.rs"
repository = "https://github.com/RamiHg/soundio-rs/libsoundio-sys"
license = "MIT"
description = "Native bindings to the libsoundio library."
keywords = ["audio", "media", "soundio"]
categories = ["multimedia", "multimedia::audio"]

[lib]
name = "libsoundio_sys"
path = "lib.rs"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1"
cc = "1.0"

[badges]
maintenance = { status = "actively-developed" }

[features]
pulse_support = []
jack_support = []
alsa_support = []
